<resources>
    <string name="app_name">Sober Check</string>
    <string name="settings">Settings</string>
    <string name="be_sober_be_happy">Be Sober, Be Safe!</string>
    <string name="happy_jumping_people">Happy jumping people</string>
    <string name="you_are_sober_and_safe_to_drive">You are sober and safe to drive</string>
    <string name="right_mark">right mark</string>
    <string name="walk_few_steps_ahead">Walk few steps ahead</string>
    <string name="man_walking">Man walking</string>
    <string name="happy_face">Happy face</string>
    <string name="you_are_drunk_please_avoid_driving">You are drunk, Please avoid driving</string>
    <string name="sad_face">Sad face</string>

    <!-- Permission Handling -->
    <string name="sms_emergency_contact">SMS Emergency Contact</string>
    <string name="call_emergency_contact">Call Emergency Contact</string>
    <string name="permission_call_rationale">Call permission is needed to make a call to your emergency contact</string>
    <string name="permission_sms_rationale">SMS permission is needed to send SMS to your emergency contact</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="permission_call_never_ask_again">Call permission will be never asked again</string>
    <string name="permission_sms_never_ask_again">SMS permission will be never asked again</string>
    <string name="permission_call_denied">Call permission was denied!</string>
    <string name="permission_sms_denied">SMS permission was denied!</string>
    <string name="permission_camera_never_ask_again">Camera permission will be never asked again!</string>
    <string name="permission_camera_denied">Camera permission denied!</string>
    <string name="permission_camera_rationale">Camera permission is requied to take a selfie of the user</string>
    <string name="permission_contacts_never_ask_again">Contact read permission will be never asked again!</string>
    <string name="permission_contacts_denied">Contacts read permission was denied!</string>
    <string name="permission_contacts_rationale">Contact read permission is necessary pick an emergency contact</string>
    <string name="pref_sms">sms</string>
    <string name="pref_emergency_contact">emergency-contact</string>
    <string name="pref_alert">audio-alert</string>
    <string name="pref_call">call</string>
    <string name="pref_drop_off_location">drop-off-location</string>
    <string name="pref_uber">uber</string>
    <string name="pref_run_in_background">run-in-background</string>
    <string name="permission_location_never_ask_again">Location permission will be never asked again!</string>
    <string name="permission_location_denied">Location permission request was denied!</string>
    <string name="permission_location_rationale">Location permission is required to order an Uber at current location</string>

    <string name="okay">Okay</string>
    <string name="message_sent">Message Sent!</string>
    <string name="sms_dialog_body">"A message was already sent to your emergency contact"</string>
    <string name="uber_dialog_body">"An Uber was already dispatched to your location"</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the photo</string>
    <string name="permission_write_storage_denied">Write storage permission was denied!</string>
    <string name="permission_storage_write_never_ask_again">Storage write permission will be never asked again!</string>
    <string name="permission_internet_never_ask_again">Internet permission will be never asked again!</string>
    <string name="permission_internet_denied">Internet permission was denied!</string>
    <string name="permission_internet_address_rationale">Internet permission is required to generate pickup address.</string>
    <string name="permission_internet_model_download_rationale">Internet permission is required to download machine learning model for the first time.</string>
    <string name="_10_seconds">10 seconds</string>

</resources>